--- a/_posts/2019-11-11-jvminit.md
+++ b/_posts/2019-11-11-jvminit.md
@@ -17,7 +17,7 @@ Die meisten Talks werden wir auf deutsch präsentieren, um keine künstlichen Ba
 Wir suchen neben Java-Themen auch "softe" Themen, die wir mit den Technik-Vorträgen abwechseln wollen.
 
 Die Talks organisieren wir über direkte Ansprache von Vortragenden oder über Deine Eigeninitative.
-Schreibe uns hierzu einfach eine Mail an kontakt@cyberjug.de!
+Schreibe uns hierzu einfach eine Mail an cyberjug@markusharrer.de oder schicke uns ein Fax an die 09171/8573176!
 
 Über unseren RSS-Feed und auf Twitter könnt ihr auch über unsere neue Treffen informieren lassen.
 
