--- a/_posts/2020-02-17-jupiter.md
+++ b/_posts/2020-02-17-jupiter.md
@@ -12,22 +12,13 @@ keywords: "jupiter, junit5"
 
 <br/>
 
-Im Java Universum sind einige wenige Testframeworks verbreitet. Dazu
-zählt z. B. das JUnit Framework oder TestNG. Die entsprechenden
-Testframeworks erleichtern die Implementierung von Unit- und/oder
-Integrationstests.
+Im Java Universum sind einige wenige Testframeworks verbreitet. Dazu zählt z. B. das JUnit Framework oder TestNG. Die entsprechenden Testframeworks erleichtern die Implementierung von Unit- und/oder Integrationstests.
 
-Im Dezember 2000 wurde der erste Commit für JUnit 3 gemacht. Im Februar
-2006 erblickte JUnit 4.0 die Welt. Im Februar 2016 erblickte schließlich
-die Alpha Release von JUnit Jupiter das Universum.
+Im Dezember 2000 wurde der erste Commit für JUnit 3 gemacht. Im Februar 2006 erblickte JUnit 4.0 die Welt. Im Februar 2016 erblickte schließlich die Alpha Release von JUnit Jupiter das Universum.
 
-Ich möchte im Rahmen des Vortrages zeigen, welche Änderungen sich aus
-der Nutzung von JUnit Jupiter im Vergleich zu anderen
-Frameworks/Versionen ergeben. Dazu zählen beispielsweise die
-Unterschiede in den Annotationen sowie deren Auswirkungen, Verwendung
-von Testklassen und die Unterstützung für das Testen von Interfaces.
+Ich möchte im Rahmen des Vortrages zeigen, welche Änderungen sich aus der Nutzung von JUnit Jupiter im Vergleich zu anderen Frameworks/Versionen ergeben. Dazu zählen beispielsweise die Unterschiede in den Annotationen sowie deren Auswirkungen, Verwendung von Testklassen und die Unterstützung für das Testen von Interfaces.
 
-Zudem gehe ich auf die Migration von JUnit3/4/TestNG Tests auf JUnit Jupiter ein.
+Zudem gehe ich auf die Migration von JUnit3/4/TestNG Tests zu JUnit Jupiter ein.
 
 <br/>
 
