update video conferencing hint

--- a/_posts/2020-02-17-jupiter.md
+++ b/_posts/2020-02-17-jupiter.md
@@ -29,4 +29,4 @@ Zudem gehe ich auf die Migration von JUnit3/4/TestNG Tests zu JUnit Jupiter ein.
 <br>
 
 
-Wir planen, dieses Mal [Jitsi](https://jitsi.org/) zu verwenden. Wir werden die entsprechenden Details kurz vor dem Vortrag bekanntgeben!
+Wir planen, wieder die Online-Konferenzlösung BigMarker zu verwenden. Wir werden die entsprechenden Details kurz vor dem Vortrag über Twitter und dem jvm-german-Slack-Channel #cyberjug bekanntgeben!
