--- a/_posts/2020-02-17-jupiter.md
+++ b/_posts/2020-02-17-jupiter.md
@@ -24,9 +24,15 @@ Zudem gehe ich auf die Migration von JUnit3/4/TestNG Tests zu JUnit Jupiter ein.
 
 *Über Karl-Heinz Marbaise*
 
-*Karl-Heinz ist Softwareentwickler, Build- und Konfigurationsmanager im Bereich Java, JEE sowie Trainer (Maven, Git, Jenkins, Subversion, Nexus), Apache Maven PMC Mitglied und MojoHaus Committer*
+*Karl-Heinz ist Softwareentwickler, Build- und Konfigurationsmanager im Bereich Java, JEE sowie Trainer (Maven, Git, Jenkins, Subversion, Nexus), Apache Maven PMC Mitglied und MojoHaus Committer.*
 
 <br>
 
+**Anmeldung**
 
-Wir planen, wieder die Online-Konferenzlösung [BigMarker](https://www.bigmarker.com/) zu verwenden. Wir werden die entsprechenden Details kurz vor dem Vortrag über Twitter und dem [jvm-german Slack-Channel](https://slackin-jvm-german.herokuapp.com/) #cyberjug bekanntgeben!
+Wir verwenden wieder die Online-Konferenzlösung [BigMarker](https://www.bigmarker.com/), die uns freundlicher Weise von [Neo4j](https://neo4j.com/) zur Verfügung gestellt wird.
+
+<div id="bigmarker-conference-widget-container3e221f58cd63"></div><script src="https://www.bigmarker.com/widget/register_widget.js?club=neo4j&conference=3e221f58cd63&widget_type=form_register&series_register=&upcoming_sub_title=Anmeldung&live_sub_title=Der%20Vortrag%20l%C3%A4uft!&rec_sub_title=Hier%20ist%20der%20Vortrag!&upcoming_button_text=Anmelden&live_button_text=Anmelden%20und%20teilnehmen&rec_button_text=Aufnahme%20ansehen&link_to_channel=false&background_color=ffffff&btext_color=2d374d&link_color=FFBF00&ltext_color=2d374d&cid=08ef4185cc3f" type="text/javascript"></script>
+
+
+Neuigkeiten gibt es über [Twitter](https://twitter.com/cyberjug). Aktuelles zur Organisation der CyberJUG finden sich im [jvm-german Slack-Channel](https://slackin-jvm-german.herokuapp.com/) #cyberjug .
