--- a/docs/_past/2019-11-25-rdb_ddd.md
+++ b/docs/_past/2019-11-25-rdb_ddd.md
@@ -1,9 +1,10 @@
 ---
 layout: post
-title: "25.11.2019: Domain Driven Design mit Relationalen Datenbanken (Jens Schauder)"
-comments: false
+title: "Domain Driven Design mit Relationalen Datenbanken (Jens Schauder)"
+date: 25-11-2019 20:15
 description: "1. Treffen am 25.11.2019 um 20:15 Uhr"
 keywords: "DDDesign"
+redirect_from: /2019/11/12/treffen_ddd/
 ---
 
 **Wir freuen uns auf den ersten Talk beim CyberJUG-Meetup von Jens Schauder!**
