include video in talk page

--- a/docs/_past/2019-11-25-rdb_ddd.md
+++ b/docs/_past/2019-11-25-rdb_ddd.md
@@ -32,5 +32,10 @@ Das beschriebene Vorgehen ist integraler Bestandteil der Architektur von Spring 
 
 <br>
 
+**Aufzeichnung**
 
-Bis dann!
+<p>
+<div align="center">
+{% include youtubePlayer.html id=page.youtubeId %}
+</div>
+</p>
