fix youtube link

--- a/docs/_news/2019-12-03-video_ddd.md
+++ b/docs/_news/2019-12-03-video_ddd.md
@@ -6,14 +6,13 @@ comments: false
 description: "Video zu 'Domain Driven Design mit Relationalen Datenbanken' von Jens Schauder ist nun online"
 keywords: "DDDesign"
 redirect_from: /2019/12/03/video_ddd/
-youtubeId: "LWnazFQOlCU"
 ---
 
 Das Video zum ersten CyberJUG-Vortrag 'Domain Driven Design mit Relationalen Datenbanken' von Jens Schauder ist nun online verfügbar!
 
 <p>
 <div align="center">
-{% include youtubePlayer.html id=page.youtubeId %}
+{% include youtubePlayer.html id="LWnazFQOlCU" %}
 </div>
 </p>
 Noch einmal vielen Dank an Jens und auch an eure zahlreiche Teilnahme!
