--- a/docs/_past/2019-11-25-rdb_ddd.md
+++ b/docs/_past/2019-11-25-rdb_ddd.md
@@ -36,6 +36,6 @@ Das beschriebene Vorgehen ist integraler Bestandteil der Architektur von Spring 
 
 <p>
 <div align="center">
-{% include youtubePlayer.html id=page.youtubeId %}
+{% include youtubePlayer.html id="LWnazFQOlCU" %}
 </div>
 </p>
