--- a/docs/_upcoming/2020-09-21-graphql.md
+++ b/docs/_upcoming/2020-09-21-graphql.md
@@ -23,9 +23,19 @@ In diesem Vortrag stelle ich Euch die Grundlagen und Konzepte von GraphQL vor un
 *Nils Hartmann ist freiberuflicher Entwickler, Architekt, Trainer und Coach aus Hamburg. Er programmiert in Java sowie JavaScript und unterstützt Teams mit Trainings und Beratung beim Ein- und Umstieg in die Entwicklung von Single-Page-Anwendungen sowie bei der Arbeit mit React, TypeScript und GraphQL. Nils ist Autor des Buches "React - Grundlagen, fortgeschrittene Techniken und Praxistipps".*
 
 
-### Anmeldung
+### Teilnahme
 
+**Online-Meetup**  
 
-*Die Anmeldung wird hier ca. zwei Wochen vor dem Event freigeschalten.*
+Wir nutzen dieses Mal Zoom und YouTube parallel:	
 
-Neuigkeiten gibt es über [Twitter](https://twitter.com/cyberjug). Aktuelles zur Organisation der CyberJUG findet sich im [jvm-german Slack-Channel](https://slackin-jvm-german.herokuapp.com/) #cyberjug .
+- Wir treffen uns ab ca. 19:50 Uhr in Zoom zum Plausch (Link wird hier vor zuvor veröffentlicht)	
+- Ab 20:15 Uhr streamen wir auch live auf YouTube unter <https://youtu.be/QSxwS9bmz_4>.	
+- Das YouTube-Live-Streaming endet nach der offiziellen Frage- und Antwort-Runde.	
+- Danach gibt es in Zoom noch die Möglichkeit, weitere Fragen und tiefergehende Diskussionen anzustoßen (open end, ohne Aufnahme).	
+
+**Interaktionsmöglichkeiten**  	
+
+Ihr habt die Möglichkeit, unter <https://git.io/JJEzS> vorab eure Fragen und Beiträge zum Thema beizusteuern.	
+
+Während des Meetups könnt ihr eure Fragen und Diskussionsbeiträge gerne in Zoom, auf YouTube, auf [Twitter](https://twitter.com/cyberjug) oder im [jvm-german Slack-Channel](https://slackin-jvm-german.herokuapp.com/) #cyberjug stellen.
