--- a/docs/_upcoming/2020-09-21-graphql.md
+++ b/docs/_upcoming/2020-09-21-graphql.md
@@ -27,15 +27,15 @@ In diesem Vortrag stelle ich Euch die Grundlagen und Konzepte von GraphQL vor un
 
 **Online-Meetup**  
 
-Wir nutzen dieses Mal Zoom und YouTube parallel:	
+Wir wieder Zoom und YouTube parallel:	
 
-- Wir treffen uns ab ca. 19:50 Uhr in Zoom zum Plausch (Link wird hier vor zuvor veröffentlicht)	
+- Wir treffen uns ab ca. 19:50 Uhr in Zoom zum Plausch (Link wird hier kurz zuvor veröffentlicht).
 - Ab 20:15 Uhr streamen wir auch live auf YouTube unter <https://youtu.be/QSxwS9bmz_4>.	
 - Das YouTube-Live-Streaming endet nach der offiziellen Frage- und Antwort-Runde.	
-- Danach gibt es in Zoom noch die Möglichkeit, weitere Fragen und tiefergehende Diskussionen anzustoßen (open end, ohne Aufnahme).	
+- Danach gibt es in Zoom noch die Möglichkeit, weitere Fragen und tiefergehende Diskussionen anzustoßen (open end, ohne Aufnahme).  
 
 **Interaktionsmöglichkeiten**  	
 
-Ihr habt die Möglichkeit, unter <https://git.io/JJEzS> vorab eure Fragen und Beiträge zum Thema beizusteuern.	
+Ihr habt die Möglichkeit, unter <https://git.io/JUZnT> vorab eure Fragen und Beiträge zum Thema beizusteuern.	
 
 Während des Meetups könnt ihr eure Fragen und Diskussionsbeiträge gerne in Zoom, auf YouTube, auf [Twitter](https://twitter.com/cyberjug) oder im [jvm-german Slack-Channel](https://slackin-jvm-german.herokuapp.com/) #cyberjug stellen.
