--- a/docs/_upcoming/2020-09-21-graphql.md
+++ b/docs/_upcoming/2020-09-21-graphql.md
@@ -29,8 +29,8 @@ In diesem Vortrag stelle ich Euch die Grundlagen und Konzepte von GraphQL vor un
 
 Wir wieder Zoom und YouTube parallel:	
 
-- Wir treffen uns ab ca. 19:50 Uhr in Zoom zum Plausch (Link wird hier kurz zuvor veröffentlicht).
-- Ab 20:15 Uhr streamen wir auch live auf YouTube unter <https://youtu.be/QSxwS9bmz_4>.	
+- Wir treffen uns ab ca. 19:50 Uhr in Zoom zum Plausch vorab: <https://innoq.zoom.us/j/96891469341>
+- Ab 20:15 Uhr streamen wir auch live auf YouTube unter <https://youtu.be/QSxwS9bmz_4>
 - Das YouTube-Live-Streaming endet nach der offiziellen Frage- und Antwort-Runde.	
 - Danach gibt es in Zoom noch die Möglichkeit, weitere Fragen und tiefergehende Diskussionen anzustoßen (open end, ohne Aufnahme).  
 
