--- a/docs/_upcoming/2020-09-21-graphql.md
+++ b/docs/_upcoming/2020-09-21-graphql.md
@@ -3,7 +3,7 @@ layout: post
 title: "GraphQL für Java-Anwendungen (Nils Hartmann)"
 date: 21-09-2020 20:15
 description: "Treffen am 21.09.2020 um 20:15 Uhr"
-keywords: "monolith, modulith"
+keywords: "graphql, java"
 ---
 
 <b>{{ page.description }}</b>
