--- a/docs/_upcoming/2020-09-21-graphql.md
+++ b/docs/_upcoming/2020-09-21-graphql.md
@@ -27,7 +27,7 @@ In diesem Vortrag stelle ich Euch die Grundlagen und Konzepte von GraphQL vor un
 
 **Online-Meetup**  
 
-Wir wieder Zoom und YouTube parallel:	
+Wir verwenden wieder Zoom und YouTube parallel:	
 
 - Wir treffen uns ab ca. 19:50 Uhr in Zoom zum Plausch vorab: <https://innoq.zoom.us/j/96891469341>
 - Ab 20:15 Uhr streamen wir auch live auf YouTube unter <https://youtu.be/QSxwS9bmz_4>
