--- a/docs/_upcoming/2020-10-19-pbt_java.md
+++ b/docs/_upcoming/2020-10-19-pbt_java.md
@@ -9,18 +9,4 @@ keywords: "pbt"
 <b>{{ page.description }}</b>
 
 
-### Teilnahme
-
-**Online-Meetup**  
-
-Wir verwenden wieder Zoom und YouTube parallel:	
-
-- Wir treffen uns ab ca. 19:50 Uhr in Zoom zum Plausch vorab.
-- Ab 20:15 Uhr streamen wir auch live auf YouTube.
-- Das YouTube-Live-Streaming endet nach der offiziellen Frage- und Antwort-Runde.	
-- Danach gibt es in Zoom noch die Möglichkeit, weitere Fragen und tiefergehende Diskussionen anzustoßen (open end, ohne Aufnahme).  
-
-
-**Interaktionsmöglichkeiten**  
-
-Während des Meetups könnt ihr eure Fragen und Diskussionsbeiträge gerne in Zoom, auf YouTube, auf [Twitter](https://twitter.com/cyberjug) oder im [jvm-german Slack-Channel](https://slackin-jvm-german.herokuapp.com/) #cyberjug stellen.
+Details folgen in Kürze.
