--- a/docs/_past/2020-09-21-graphql.md
+++ b/docs/_past/2020-09-21-graphql.md
@@ -23,19 +23,6 @@ In diesem Vortrag stelle ich Euch die Grundlagen und Konzepte von GraphQL vor un
 *Nils Hartmann ist freiberuflicher Entwickler, Architekt, Trainer und Coach aus Hamburg. Er programmiert in Java sowie JavaScript und unterstützt Teams mit Trainings und Beratung beim Ein- und Umstieg in die Entwicklung von Single-Page-Anwendungen sowie bei der Arbeit mit React, TypeScript und GraphQL. Nils ist Autor des Buches "React - Grundlagen, fortgeschrittene Techniken und Praxistipps".*
 
 
-### Teilnahme
+### Aufnahme
 
-**Online-Meetup**  
-
-Wir verwenden wieder Zoom und YouTube parallel:	
-
-- Wir treffen uns ab ca. 19:50 Uhr in Zoom zum Plausch vorab: <https://innoq.zoom.us/j/96891469341>
-- Ab 20:15 Uhr streamen wir auch live auf YouTube unter <https://youtu.be/QSxwS9bmz_4>
-- Das YouTube-Live-Streaming endet nach der offiziellen Frage- und Antwort-Runde.	
-- Danach gibt es in Zoom noch die Möglichkeit, weitere Fragen und tiefergehende Diskussionen anzustoßen (open end, ohne Aufnahme).  
-
-**Interaktionsmöglichkeiten**  	
-
-Ihr habt die Möglichkeit, unter <https://git.io/JUZnT> vorab eure Fragen und Beiträge zum Thema beizusteuern.	
-
-Während des Meetups könnt ihr eure Fragen und Diskussionsbeiträge gerne in Zoom, auf YouTube, auf [Twitter](https://twitter.com/cyberjug) oder im [jvm-german Slack-Channel](https://slackin-jvm-german.herokuapp.com/) #cyberjug stellen.
+Auf Youtube findet ihr die Aufnahme des Meetups: <https://youtu.be/QSxwS9bmz_4>
