--- a/docs/_upcoming/2020-10-19-pbt_java.md
+++ b/docs/_upcoming/2020-10-19-pbt_java.md
@@ -9,4 +9,39 @@ keywords: "pbt"
 <b>{{ page.description }}</b>
 
 
-Details folgen in Kürze.
+### Beschreibung
+
+Testgetriebene Entwicklung in Java und anderen objektorientierten Sprachen setzt bislang meist auf beispielbasierte Testfälle, wie man sie leicht mit JUnit und ähnlichen Testframeworks erstellen kann.
+Schaut man jedoch über den Tellerrand und auf funktionale Programmiersprachen wie z.B. Haskell oder F#, findet man dort etwas anderes:
+Property-basiertes Testen (engl. Property-based Testing).
+
+Property-based Testing basieren auf der Idee, die erwünschten Eigenschaften unseres Programms zu beschreiben und anschließend das Framework selbstständig Testfälle generieren zu lassen, die diese Eigenschaften bestätigen oder falsifizieren.
+
+In diesem Vortrag werde ich sowohl auf die Theorie hinter Property-based Testing eingehen als auch konkret zeigen, wie man mit jqwik unter Java solche Tests umsetzen kann.
+Dabei spielen Muster und Strategien zum Finden guter Properties eine wichtige Rolle.
+
+### Über den Speaker
+
+**Johannes Link**  <a href="https://twitter.com/johanneslink"><i class="fa fa-twitter"></i></a>
+
+*Johannes Link beschäftigt sich schon seit Ende des letzten Jahrhunderts mit Extreme Programming und anderen agilen Ansätzen.
+Ein wesentlicher Schwerpunkt dabei war und ist die testgetriebene Entwicklung.
+Johannes war einer der Köpfe hinter Konzeption und Umsetzung der JUnit-5-Plattform und ist Haupt-Committer bei [jqwik.net](https://jqwik.net/).*
+
+
+### Teilnahme
+
+**Online-Meetup**  
+
+Wir verwenden wieder Zoom und YouTube parallel:	
+
+- Wir treffen uns ab ca. 19:50 Uhr in Zoom zum Plausch vorab. Der Link wird hier kurz zuvor veröffentlicht.
+- Ab 20:15 Uhr streamen wir auch live auf YouTube: <https://youtu.be/3kaD-3gyNe8>
+- Das YouTube-Live-Streaming endet nach der offiziellen Frage- und Antwort-Runde.	
+- Danach gibt es in Zoom noch die Möglichkeit, weitere Fragen und tiefergehende Diskussionen anzustoßen (open end, ohne Aufnahme).  
+
+**Interaktionsmöglichkeiten**  	
+
+Ihr habt die Möglichkeit, unter <https://github.com/cyberjug/meetup/issues/12> vorab eure Fragen und Beiträge zum Thema beizusteuern.	
+
+Während des Meetups könnt ihr eure Fragen und Diskussionsbeiträge gerne in Zoom, auf YouTube, auf [Twitter](https://twitter.com/cyberjug) oder im [jvm-german Slack-Channel](https://slackin-jvm-german.herokuapp.com/) #cyberjug stellen.
