--- a/docs/_upcoming/2020-10-19-pbt_java.md
+++ b/docs/_upcoming/2020-10-19-pbt_java.md
@@ -33,12 +33,14 @@ Johannes war einer der Köpfe hinter Konzeption und Umsetzung der JUnit-5-Plattf
 
 **Online-Meetup**  
 
+Wir sind jetzt auch auf Meetup.com vertreten: <https://www.meetup.com/cyberjug/>
+
 Wir verwenden wieder Zoom und YouTube parallel:	
 
-- Wir treffen uns ab ca. 19:50 Uhr in Zoom zum Plausch vorab. Der Link wird hier kurz zuvor veröffentlicht.
+- Wir treffen uns ab ca. 19:50 Uhr zum Plausch vorab. Dafür haben wir uns dieses Mal etwas besonders ausgedacht :-). Der Link wird hier kurz zuvor veröffentlicht.
 - Ab 20:15 Uhr streamen wir auch live auf YouTube: <https://youtu.be/3kaD-3gyNe8>
 - Das YouTube-Live-Streaming endet nach der offiziellen Frage- und Antwort-Runde.	
-- Danach gibt es in Zoom noch die Möglichkeit, weitere Fragen und tiefergehende Diskussionen anzustoßen (open end, ohne Aufnahme).  
+- Danach gibt es noch die Möglichkeit, weitere Fragen und tiefergehende Diskussionen anzustoßen (open end, ohne Aufnahme). 
 
 **Interaktionsmöglichkeiten**  	
 
