--- a/docs/_upcoming/2020-10-19-pbt_java.md
+++ b/docs/_upcoming/2020-10-19-pbt_java.md
@@ -33,17 +33,19 @@ Johannes war einer der Köpfe hinter Konzeption und Umsetzung der JUnit-5-Plattf
 
 **Online-Meetup**  
 
-Wir sind jetzt auch auf Meetup.com vertreten: <https://www.meetup.com/cyberjug/>
+Wir verwenden dieses Mal SpatialChat und YouTube:	
 
-Wir verwenden wieder Zoom und YouTube parallel:	
+- Wir treffen uns ab ca. 19:50 Uhr zum Plausch vorab. Dafür haben wir uns dieses Mal etwas besonders ausgedacht :-). Wir nutzen SpatialChat als Plauderplattform. Den Link findet ihr kurz vorher hier oder jetzt schon auf [Meetup.com](https://www.meetup.com/de-DE/cyberjug/events/273593849/).
+- Ab 20:15 Uhr streamen wir live auf YouTube: <https://youtu.be/3kaD-3gyNe8>
+- Das YouTube-Live-Streaming endet nach der offiziellen Frage- und Antwort-Runde.
+- Danach gibt es noch die Möglichkeit, weitere Fragen und tiefergehende Diskussionen in SpatialChat anzustoßen (open end, ohne Aufnahme). 
 
-- Wir treffen uns ab ca. 19:50 Uhr zum Plausch vorab. Dafür haben wir uns dieses Mal etwas besonders ausgedacht :-). Der Link wird hier kurz zuvor veröffentlicht.
-- Ab 20:15 Uhr streamen wir auch live auf YouTube: <https://youtu.be/3kaD-3gyNe8>
-- Das YouTube-Live-Streaming endet nach der offiziellen Frage- und Antwort-Runde.	
-- Danach gibt es noch die Möglichkeit, weitere Fragen und tiefergehende Diskussionen anzustoßen (open end, ohne Aufnahme). 
-
-**Interaktionsmöglichkeiten**  	
+**Interaktionsmöglichkeiten**  
 
 Ihr habt die Möglichkeit, unter <https://github.com/cyberjug/meetup/issues/12> vorab eure Fragen und Beiträge zum Thema beizusteuern.	
 
-Während des Meetups könnt ihr eure Fragen und Diskussionsbeiträge gerne in Zoom, auf YouTube, auf [Twitter](https://twitter.com/cyberjug) oder im [jvm-german Slack-Channel](https://slackin-jvm-german.herokuapp.com/) #cyberjug stellen.
+Während des Meetups könnt ihr eure Fragen und Diskussionsbeiträge gerne auf YouTube, auf [Twitter](https://twitter.com/cyberjug) oder im [jvm-german Slack-Channel](https://slackin-jvm-german.herokuapp.com/) #cyberjug stellen.
+
+**Zusatzhinweis**  
+
+Wir sind jetzt auch auf Meetup.com vertreten: <https://www.meetup.com/cyberjug/>
