--- a/docs/_upcoming/2020-10-19-pbt_java.md
+++ b/docs/_upcoming/2020-10-19-pbt_java.md
@@ -35,7 +35,7 @@ Johannes war einer der Köpfe hinter Konzeption und Umsetzung der JUnit-5-Plattf
 
 Wir verwenden dieses Mal SpatialChat und YouTube:	
 
-- Wir treffen uns ab ca. 19:50 Uhr zum Plausch vorab. Dafür haben wir uns dieses Mal etwas besonders ausgedacht :-). Wir nutzen SpatialChat als Plauderplattform. Den Link findet ihr kurz vorher hier oder jetzt schon auf [Meetup.com](https://www.meetup.com/de-DE/cyberjug/events/273593849/).
+- Wir treffen uns ab ca. 19:50 Uhr zum Plausch vorab. Dafür haben wir uns dieses Mal etwas besonders ausgedacht :-). Wir nutzen SpatialChat als Plauderplattform: <https://spatial.chat/s/cyberjug?sp=pbt>. 
 - Ab 20:15 Uhr streamen wir live auf YouTube: <https://youtu.be/3kaD-3gyNe8>
 - Das YouTube-Live-Streaming endet nach der offiziellen Frage- und Antwort-Runde.
 - Danach gibt es noch die Möglichkeit, weitere Fragen und tiefergehende Diskussionen in SpatialChat anzustoßen (open end, ohne Aufnahme). 
@@ -48,4 +48,4 @@ Während des Meetups könnt ihr eure Fragen und Diskussionsbeiträge gerne auf Y
 
 **Zusatzhinweis**  
 
-Wir sind jetzt auch auf Meetup.com vertreten: <https://www.meetup.com/cyberjug/>
+Wir sind jetzt auch auf Meetup.com vertreten: <https://www.meetup.com/de-DE/cyberjug/events/273593849/>.
