--- a/docs/_news/2021-01-19-pause.md
+++ b/docs/_news/2021-01-19-pause.md
@@ -7,7 +7,7 @@ keywords: "orga"
 ---
 
 Die CyberJUG wurde im November 2019 gegründet, um ein ergänzendes Angebot zu den lokalen Java User Groups darzustellen.
-Sie wollte an Java interessierte Menschen eine Community bieten, die keine Möglichkeit hatten, abends eine Vor-Ort-Veranstaltung einer Java User Group zu besuchen.
+Sie wollte an Java interessierten Menschen eine Community bieten, die keine Möglichkeit hatten, abends eine Vor-Ort-Veranstaltung einer Java User Group zu besuchen.
 Es war auch nie ein Ziel, anderen JUGs Konkurrenz zu machen.
 Daher wurden die Treffen auch bewusst zu einer späteren Zeit sowie remote durchgeführt.
 
