--- a/docs/_news/2021-01-19-pause.md
+++ b/docs/_news/2021-01-19-pause.md
@@ -13,7 +13,7 @@ Daher wurden die Treffen auch bewusst zu einer späteren Zeit sowie remote durch
 
 In Zeiten von Corona hat sich aber der ergänzende Charakter der CyberJUG als reine Remote-Veranstaltung erledigt.
 Viele deutschsprachige Java User Groups können mittlerweile souverän ihre eigenen Remote-Veranstaltungen durchführen.
-Zudem gibt es mit der [CyberLand](https://cyberland.ijug.eu/) auch noch weiteres, sehr vielversprechendes Kind der Remote-Java-User-Group-Landschaft.
+Zudem gibt es mit der [CyberLand](https://cyberland.ijug.eu/) auch noch ein weiteres, sehr vielversprechendes Kind der Remote-Java-User-Group-Landschaft.
 
 Die CyberJUG macht daher eine längere Pause bis es wieder eine Lücke in der deutschsprachigen Java-Community zu besetzen gibt.
 
