--- a/docs/_news/2021-01-19-pause.md
+++ b/docs/_news/2021-01-19-pause.md
@@ -22,4 +22,4 @@ Wir bedanken uns bei allen Speakern und Teilnehmenden für die schöne Zeit und 
 <br/>
 
 Markus Harrer  
-Initiator CyberJUG
+Initiator und Organisator der CyberJUG
